<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Top DVD Rentals</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_text">Get Top Rentals</string>
    <string name="title">Title</string>
    <string name="poster">Poster</string>
    <string name="critic">Critic Rating</string>
    <string name="audience">Audience Rating</string>
    <string name="title_activity_list_row">ListRow</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="dummy_text">Select a Movie</string>
    <string name="edit_hint">Search by Minimum Critic Rating</string>
    <string name="src_btn">Search</string>
    <string name="text_str">Share via Text</string>
    <string name="poster_str">View Large Poster</string>
    <string name="src">Search</string>
    <string name="prefs">Preferneces</string>
    <string name="alert">Search by Minimum Critic Rating</string>
    <string name="chang_color">Change Colors</string>
    <string name="title_activity_widget_config">Configure Transition Speed</string>
    <string name="trans_speed">Transition Speed</string>
    <string name="slow">Slow</string>
    <string name="med">Medium</string>
    <string name="fast">Fast</string>
    <string name="set">Set Transition Speed</string>
    <string name="wid_img">Widget Image</string>

</resources>
