<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/title_header"
        android:text="@string/title"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:textStyle="bold"
        android:textColor="@color/btn_color"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/img_header"
        android:text="@string/poster"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:textStyle="bold"
        android:textColor="@color/btn_color"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/rating1_header"
        android:text="@string/critic"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:textStyle="bold"
        android:textColor="@color/btn_color"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/rating2_header"
        android:text="@string/audience"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:textStyle="bold"
        android:textColor="@color/btn_color"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

</LinearLayout>
