<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WidgetConfig" >

    <RadioGroup
        android:id="@+id/trans_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="true"
            android:text="@string/slow"
            android:textColor="@color/btn_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/med"
            android:textColor="@color/btn_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:textColor="@color/btn_color"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/trans_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/trans_speed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/btn_color"
        android:textSize="22sp" />

    <Button
        android:id="@+id/trans_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trans_radio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:padding="15dp"
        android:text="@string/set"
        android:textColor="@color/btn_color"
        android:textSize="24sp" />

</RelativeLayout>
