<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center" >

        <Button
            android:id="@+id/posterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/poster_str"
            android:textColor="@color/btn_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/posterBtn"
            android:text="@string/text_str"
            android:textColor="@color/btn_color"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dummy_text"
        android:textColor="@color/btn_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/infoView"
        android:layout_width="292dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/dummy_text"
        android:textColor="@color/btn_color"
        android:textColorLink="@color/btn_color"
         android:scrollbars="vertical"
        android:textSize="16sp" />

</LinearLayout>
