<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/wid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textColor="@color/btn_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wid_crit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/critic"
            android:textColor="@color/btn_color"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/wid_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/wid_img"
            android:paddingLeft="3dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/wid_title_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/wid_critic_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:textColor="@color/text_color" />

    </LinearLayout>

</FrameLayout>